fix IE 11 wrapping issue in left nav

--- a/src/components/LeftNav.module.scss
+++ b/src/components/LeftNav.module.scss
@@ -31,7 +31,7 @@
 
     .leftMenu{
         list-style: none;
-        margin: 0;
+        margin: 0 0 0 1em;
         height: 100%;
         width: 100%;
         padding-inline-start: 0;
